--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,7 +53,7 @@ flexbox = { group = "com.google.android.flexbox", name = "flexbox", version.ref 
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
-
+firebase-storage = {group = "com.google.firebase", name = "firebase-storage"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
