--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ viewpager2Version = "1.1.0"
 flexbox = "3.0.0"
 navigation = "2.5.3"
 legacySupportV4 = "1.0.0"
+mapboxAndroid = "11.4.1"
 
 
 [libraries]
@@ -53,6 +54,7 @@ flexbox = { group = "com.google.android.flexbox", name = "flexbox", version.ref 
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+mapbox-android = {group="com.mapbox.maps",name="android", version.ref="mapboxAndroid"}
 
 
 [plugins]
