update autocomplete for map

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,8 +22,8 @@ viewpager2Version = "1.1.0"
 flexbox = "3.0.0"
 navigation = "2.5.3"
 legacySupportV4 = "1.0.0"
-mapboxAndroid = "11.4.1"
-
+mapboxAndroid = "10.15.0"
+mapboxSearch ="1.0.0-rc.6"
 
 [libraries]
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -55,6 +55,7 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 mapbox-android = {group="com.mapbox.maps",name="android", version.ref="mapboxAndroid"}
+mapbox-search = {group="com.mapbox.search", name="mapbox-search-android-ui" ,version.ref="mapboxSearch"}
 
 
 [plugins]
