--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ navigation = "2.5.3"
 legacySupportV4 = "1.0.0"
 mapboxAndroid = "10.15.0"
 mapboxSearch ="1.0.0-rc.7"
+mapboxSdkServicesVersion = "7.0.0"
 
 [libraries]
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -57,7 +58,7 @@ legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", ver
 mapbox-android = {group="com.mapbox.maps",name="android", version.ref="mapboxAndroid"}
 mapbox-search = {group="com.mapbox.search", name="mapbox-search-android-ui" ,version.ref="mapboxSearch"}
 firebase-storage = {group = "com.google.firebase", name = "firebase-storage"}
-
+mapbox-sdk-services = { module = "com.mapbox.mapboxsdk:mapbox-sdk-services", version.ref = "mapboxSdkServicesVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
